--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
     "repository": [
         {
             "type": "git",
-            "url": "https://github.com/nikolajlovenhardt/architect.git"
+            "url": "https://github.com/dzangolab/architect.git"
         }
     ],
     "require": {
         "laravel/framework": "^7.0.0",
-        "optimus/architect": "dev-master as 2.0.0"
+        "optimus/architect": "^2.0.0"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
